--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 		"postcss": "^8.4.18",
 		"prettier": "^2.6.2",
 		"prettier-plugin-svelte": "^2.7.0",
+		"prisma": "^4.5.0",
 		"svelte": "^3.44.0",
 		"svelte-check": "^2.7.1",
 		"svelte-preprocess": "^4.10.7",
@@ -32,5 +33,8 @@
 		"vite": "^3.1.0",
 		"zod": "^3.19.1"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"@prisma/client": "^4.5.0"
+	}
 }
