--- a/package.json
+++ b/package.json
@@ -36,8 +36,8 @@
 	"type": "module",
 	"dependencies": {
 		"@prisma/client": "^4.5.0",
-		"@trpc/client": "10.0.0-rc.1",
-		"@trpc/server": "10.0.0-rc.1",
+		"@trpc/client": "9.27.4",
+		"@trpc/server": "9.27.4",
 		"trpc-sveltekit": "^2.3.7"
 	}
 }
