--- a/package.json
+++ b/package.json
@@ -11,9 +11,13 @@
 		"lint": "prettier --plugin-search-dir . --check . && eslint .",
 		"format": "prettier --plugin-search-dir . --write ."
 	},
+	"prisma": {
+    "seed": "ts-node prisma/seed.ts"
+  },
 	"devDependencies": {
 		"@sveltejs/adapter-static": "next",
 		"@sveltejs/kit": "next",
+		"@types/node": "^18.11.8",
 		"@typescript-eslint/eslint-plugin": "^5.27.0",
 		"@typescript-eslint/parser": "^5.27.0",
 		"autoprefixer": "^10.4.12",
@@ -28,8 +32,9 @@
 		"svelte-check": "^2.7.1",
 		"svelte-preprocess": "^4.10.7",
 		"tailwindcss": "^3.2.0",
+		"ts-node": "^10.9.1",
 		"tslib": "^2.3.1",
-		"typescript": "^4.7.4",
+		"typescript": "^4.8.4",
 		"vite": "^3.1.0",
 		"zod": "^3.19.1"
 	},
