--- a/package.json
+++ b/package.json
@@ -9,11 +9,10 @@
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"lint": "prettier --plugin-search-dir . --check . && eslint .",
-		"format": "prettier --plugin-search-dir . --write ."
+		"format": "prettier --plugin-search-dir . --write .",
+		"seed": "tsc --module commonjs prisma/seed.ts",
+		"push": "node prisma/seed.cjs"
 	},
-	"prisma": {
-    "seed": "ts-node prisma/seed.ts"
-  },
 	"devDependencies": {
 		"@sveltejs/adapter-static": "next",
 		"@sveltejs/kit": "next",
