--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
 	},
 	"devDependencies": {
 		"@popperjs/core": "^2.11.6",
-		"@sveltejs/adapter-static": "next",
+		"@sveltejs/adapter-node": "next",
 		"@sveltejs/kit": "next",
 		"@types/node": "^18.11.8",
 		"@typescript-eslint/eslint-plugin": "^5.27.0",
@@ -26,7 +26,7 @@
 		"eslint-config-prettier": "^8.3.0",
 		"eslint-plugin-svelte3": "^4.0.0",
 		"flowbite": "^1.5.4",
-		"flowbite-svelte": "^0.27.16",
+		"flowbite-svelte": "^0.28.4",
 		"postcss": "^8.4.18",
 		"prettier": "^2.6.2",
 		"prettier-plugin-svelte": "^2.7.0",
