--- a/package.json
+++ b/package.json
@@ -1,51 +1,56 @@
 {
-	"name": "corp-quintero",
-	"version": "0.0.1",
-	"private": true,
-	"scripts": {
-		"dev": "vite dev",
-		"build": "vite build",
-		"preview": "vite preview --host --port 5173",
-		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
-		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
-		"lint": "prettier --plugin-search-dir . --check . && eslint .",
-		"format": "prettier --plugin-search-dir . --write .",
-		"seed": "tsc --module commonjs prisma/seed.ts",
-		"push": "node prisma/seed.cjs"
-	},
-	"devDependencies": {
-		"@popperjs/core": "^2.11.6",
-		"@sveltejs/adapter-node": "next",
-		"@sveltejs/kit": "next",
-		"@types/node": "^18.11.8",
-		"@typescript-eslint/eslint-plugin": "^5.27.0",
-		"@typescript-eslint/parser": "^5.27.0",
-		"autoprefixer": "^10.4.12",
-		"classnames": "^2.3.2",
-		"eslint": "^8.16.0",
-		"eslint-config-prettier": "^8.3.0",
-		"eslint-plugin-svelte3": "^4.0.0",
-		"flowbite": "^1.5.4",
-		"flowbite-svelte": "^0.28.4",
-		"postcss": "^8.4.18",
-		"prettier": "^2.6.2",
-		"prettier-plugin-svelte": "^2.7.0",
-		"prisma": "^4.7.1",
-		"svelte": "^3.54.0",
-		"svelte-check": "^2.9.2",
-		"svelte-preprocess": "^4.10.7",
-		"tailwindcss": "^3.2.0",
-		"ts-node": "^10.9.1",
-		"tslib": "^2.4.1",
-		"typescript": "^4.9.3",
-		"vite": "^4.0.0",
-		"zod": "^3.19.1"
-	},
-	"type": "module",
-	"dependencies": {
-		"@prisma/client": "^4.7.1",
-		"@trpc/client": "9.27.4",
-		"@trpc/server": "9.27.4",
-		"trpc-sveltekit": "^2.3.7"
-	}
+  "name": "corp-quintero",
+  "version": "0.0.1",
+  "private": true,
+  "scripts": {
+    "dev": "vite dev",
+    "test": "playwright test",
+    "test:debug": "playwright test --debug",
+    "test:gen": "playwright codegen http://localhost:5173/",
+    "test:results": "playwright show-report",
+    "build": "vite build",
+    "preview": "vite preview --host --port 5173",
+    "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
+    "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
+    "lint": "prettier --plugin-search-dir . --check . && eslint .",
+    "format": "prettier --plugin-search-dir . --write .",
+    "seed": "tsc --module commonjs prisma/seed.ts",
+    "push": "node prisma/seed.cjs"
+  },
+  "devDependencies": {
+    "@playwright/test": "^1.28.1",
+    "@popperjs/core": "^2.11.6",
+    "@sveltejs/adapter-node": "next",
+    "@sveltejs/kit": "next",
+    "@types/node": "^18.11.8",
+    "@typescript-eslint/eslint-plugin": "^5.27.0",
+    "@typescript-eslint/parser": "^5.27.0",
+    "autoprefixer": "^10.4.12",
+    "classnames": "^2.3.2",
+    "eslint": "^8.16.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-svelte3": "^4.0.0",
+    "flowbite": "^1.5.4",
+    "flowbite-svelte": "^0.28.4",
+    "postcss": "^8.4.18",
+    "prettier": "^2.6.2",
+    "prettier-plugin-svelte": "^2.7.0",
+    "prisma": "^4.7.1",
+    "svelte": "^3.54.0",
+    "svelte-check": "^2.9.2",
+    "svelte-preprocess": "^4.10.7",
+    "tailwindcss": "^3.2.0",
+    "ts-node": "^10.9.1",
+    "tslib": "^2.4.1",
+    "typescript": "^4.9.3",
+    "vite": "^4.0.0",
+    "zod": "^3.19.1"
+  },
+  "type": "module",
+  "dependencies": {
+    "@prisma/client": "^4.7.1",
+    "@trpc/client": "9.27.4",
+    "@trpc/server": "9.27.4",
+    "trpc-sveltekit": "^2.3.7"
+  }
 }
